--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </p>
   </div>
   <div>
-    <div class="color green"></div>
-    <div class="color red"></div>
-    <div class="color blue"></div>
+    <div class="color green" id="green"></div>
+    <div class="color red" id="red"></div>
+    <div class="color blue" id="blue"></div>
   </div>
 </body>
 </html>
